--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.11.0",
