added scraper functionality to api call

--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "got": "^9.6.0",
+    "metascraper": "^5.0.0",
+    "metascraper-author": "^5.0.1",
+    "metascraper-date": "^5.0.1",
+    "metascraper-description": "^5.0.1",
+    "metascraper-image": "^5.0.1",
+    "metascraper-logo": "^5.0.1",
+    "metascraper-title": "^5.0.1",
+    "metascraper-url": "^5.0.1",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
     "nuxt-buefy": "^0.3.2",
