added amazon scraper

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "got": "^9.6.0",
     "metascraper": "^5.0.0",
+    "metascraper-amazon": "^5.0.1",
     "metascraper-author": "^5.0.1",
     "metascraper-date": "^5.0.1",
     "metascraper-description": "^5.0.1",
