--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "firebase-admin": "^7.3.0",
     "got": "^9.6.0",
     "metascraper": "^5.0.0",
     "metascraper-amazon": "^5.0.1",
